--- a/pig-game/styles.css
+++ b/pig-game/styles.css
@@ -6,6 +6,7 @@
   --color3: #000;
   --color4: rgba(255, 0, 0, 0.7);
   --color5: rgba(255, 255, 255, 0.7);
+  --color6: #3179ff;
 }
 
 html,
@@ -32,6 +33,7 @@ body h1 {
 
 button {
   padding: 10px;
+  color: var(--color6);
 }
 
 div {
