--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -4,12 +4,8 @@
   --chuRed: #61122f;
   --chuEmerald: #557c3e;
   --chuGold: #f6b319;
-}
-
-/***** Bootstrap Overrides *****/
-.navbar {
-  margin: 0;
-  padding: 0;
+  --chuLightGray: #e7e7e7;
+  --chuDarkGrey: #222;
 }
 
 /***** Site Design *****/
@@ -21,37 +17,40 @@ body {
 }
 
 #header-nav {
-  background-color: var(--chuGold);
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
 }
 
 #logo-img {
-  background: url('./images/restaurant-logo_large.png') no-repeat;
+  background: url('../images/restaurant-logo_large.png') no-repeat;
   width: 150px;
   height: 150px;
   margin: 10px 15px 10px 0;
 }
 
+.navbar-brand {
+  padding-top: 25px;
+}
+
 .navbar-brand h1 {
-  /* Company name */
   font-family: 'Lora', serif;
   color: var(--chuEmerald);
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
+  text-shadow: 1px 1px 1px var(--chuDarkGrey);
   margin-top: 0;
   margin-bottom: 0;
   line-height: 0.75;
 }
 
-.navbar-brand a, /* Add (.navbar-brand a) in order to remove at default */
 .navbar-brand a:hover,
 .navbar-brand a:focus {
   text-decoration: none;
 }
 
 .navbar-brand p {
-  /* Kosher cert */
   color: #000;
   text-transform: uppercase;
   font-size: 0.7em;
@@ -59,6 +58,37 @@ body {
 }
 
 .navbar-brand p span {
-  /* Star-K */
   vertical-align: middle;
+}
+
+#nav-list {
+  margin-top: 10px;
+}
+
+#nav-list a {
+  color: var(--chuRed);
+  text-align: center;
+}
+
+#nav-list a:hover {
+  background-color: var(--chuLightGray);
+}
+
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+#phone {
+  margin-top: 5px;
+}
+
+#phone a {
+  text-align: right;
+  padding-bottom: 0;
+}
+
+#phone div {
+  color: var(--chuEmerald);
+  text-align: right;
+  padding-right: 15px;
 }
