--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -92,3 +92,13 @@ body {
   text-align: right;
   padding-right: 15px;
 }
+
+.navbar-header button.navbar-toggle,
+.navbar-header .icon-bar {
+  border: 1px solid var(--chuRed);
+}
+
+.navbar-header button.navbar-toggle {
+  clear: left;
+  margin-top: -30px;
+}
