--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -84,7 +84,7 @@ body {
 
 #phone a {
   text-align: right;
-  padding-bottom: 0;
+  padding-bottom: 10px;
 }
 
 #phone div {
@@ -107,8 +107,18 @@ body {
   margin-top: -30px;
 }
 
+.container .jumbotron {
+  background-color: transparent;
+  box-shadow: 0 0 50px #230510;
+  border: 2px solid #230510;
+}
+
 /***** Large Devices *****/
 @media (min-width: 1200px) {
+  .container .jumbotron {
+    background: url('../images/jumbotron_1200.jpg') no-repeat;
+    height: 675px;
+  }
 }
 
 /***** Medium Devices *****/
@@ -119,6 +129,11 @@ body {
     height: 100px;
     margin: 5px 5px 5px 0;
   }
+
+  .container .jumbotron {
+    background: url('../images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+  }
 }
 
 /***** Small Devices *****/
@@ -128,6 +143,11 @@ body {
     width: 100px;
     height: 100px;
     margin: 5px 5px 5px 0;
+  }
+
+  .container .jumbotron {
+    background: url('../images/jumbotron_768.jpg') no-repeat;
+    height: 432px;
   }
 }
 
@@ -159,5 +179,31 @@ body {
   #collapsable-nav a span {
     font-size: 1em;
     margin-right: 5px;
+  }
+
+  #call-btn > a {
+    font-size: 1.5em;
+    display: block;
+    margin: 0 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color: #951c49;
+  }
+
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: 0.7em;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
+
+  .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+  }
+
+  .container .jumbotron img {
+    border-radius: 6px;
   }
 }
