--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -158,6 +158,42 @@ body {
   border-radius: 4px 4px 0 0;
 }
 
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: var(--chuDarkGrey);
+  border-top: 0;
+}
+
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+
+#hours,
+#address {
+  line-height: 2;
+}
+
+#hours > span,
+#address > span {
+  font-size: 1.3em;
+}
+
+#address p {
+  color: var(--chuEmerald);
+  font-size: 0.8em;
+  line-height: 1.8;
+}
+
+#testimonials {
+  font-style: italic;
+}
+
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+
 /***** Large Devices *****/
 @media (min-width: 1200px) {
   .container .jumbotron {
