--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -158,7 +158,7 @@ body {
   border-radius: 4px 4px 0 0;
 }
 
-.panel-footer {
+footer {
   margin-top: 30px;
   padding-top: 35px;
   padding-bottom: 30px;
@@ -166,7 +166,7 @@ body {
   border-top: 0;
 }
 
-.panel-footer div.row {
+footer div.row {
   margin-bottom: 35px;
 }
 
@@ -253,6 +253,13 @@ body {
     height: 20px;
   }
 
+  #logo-img {
+    background: url('../images/restaurant-logo_small.png') no-repeat;
+    width: 50px;
+    height: 50px;
+    margin: 15px -10px 5px 5px;
+  }
+
   #collapsable-nav a {
     font-size: 1.2em;
   }
@@ -296,16 +303,16 @@ body {
     margin: 0 auto 15px;
   }
 
-  .panel-footer section {
+  footer section {
     margin-bottom: 30px;
     text-align: center;
   }
 
-  .panel-footer section:nth-child(3) {
+  footer section:nth-child(3) {
     margin-bottom: 0;
   }
 
-  .panel-footer section hr {
+  footer section hr {
     width: 50%;
   }
 }
