--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -346,3 +346,14 @@ footer div.row {
     width: 50%;
   }
 }
+
+@media (max-width: 479px) {
+  .col-xxs-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 100%;
+  }
+}
