--- a/module3-site/templates/menu.html
+++ b/module3-site/templates/menu.html
@@ -4,7 +4,7 @@
     Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a quart.
   </div>
   <section class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -12,7 +12,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -20,7 +20,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -28,7 +28,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -36,7 +36,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -44,7 +44,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -52,7 +52,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
@@ -60,7 +60,7 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
       <a href="single-category.html">
         <div class="category-tile">
           <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
