--- a/module3-site/css/styles.css
+++ b/module3-site/css/styles.css
@@ -224,6 +224,62 @@ footer div.row {
   margin-bottom: 50px;
 }
 
+.menu-item-tile {
+  margin-bottom: 25px;
+}
+
+.menu-item-tile hr {
+  width: 80%;
+}
+
+.menu-item-tile .menu-item-price {
+  font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
+}
+
+.menu-item-tile .menu-item-price span {
+  font-size: 0.6em;
+}
+
+.menu-item-photo {
+  position: relative;
+  border: 2px solid #61122f;
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+
+.menu-item-photo div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+
+.menu-item-description {
+  padding-right: 30px;
+}
+
+h3.menu-item-title {
+  margin: 0 0 10px;
+}
+
+section.row:last-of-type .menu-item-tile:last-of-type hr {
+  display: none !important;
+}
+
+.menu-item-details {
+  font-size: 0.9em;
+  font-style: italic;
+}
+
 /***** Large Devices *****/
 @media (min-width: 1200px) {
   .container .jumbotron {
@@ -331,6 +387,20 @@ footer div.row {
     background-size: cover;
     width: 100%;
     margin: 0 auto 15px;
+  }
+
+  .menu-item-photo {
+    margin: auto;
+  }
+
+  .menu-item-tile .menu-item-price {
+    text-align: center;
+    margin: auto;
+    margin-bottom: 15px;
+  }
+
+  .menu-item-description {
+    text-align: center;
   }
 
   footer section {
